--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"flow-bin": "0.54.0",
 		"flow-typed": "2.1.5",
 		"husky": "0.14.3",
+		"jest": "20.0.4",
 		"jest-expo": "20.0.0",
 		"react-native-scripts": "1.3.1",
 		"react-test-renderer": "16.0.0-alpha.12"
@@ -25,7 +26,7 @@
 		"eject": "react-native-scripts eject",
 		"android": "react-native-scripts android",
 		"ios": "react-native-scripts ios",
-		"test": "flow && eslint .",
+		"test": "jest && flow && eslint .",
 		"precommit": "yarn test"
 	},
 	"jest": {
