--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"devDependencies": {
 		"babel-eslint": "7.2.3",
+		"babel-preset-react-native-stage-0": "^1.0.1",
 		"eslint": "4.6.1",
 		"eslint-plugin-flowtype": "2.35.1",
 		"eslint-plugin-import": "2.7.0",
@@ -15,28 +16,23 @@
 		"flow-typed": "2.1.5",
 		"husky": "0.14.3",
 		"jest": "20.0.4",
-		"jest-expo": "20.0.0",
-		"react-native-scripts": "1.3.1",
 		"react-test-renderer": "16.0.0-alpha.12"
 	},
-	"main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
 	"scripts": {
 		"postinstall": "remotedev-debugger",
-		"start": "react-native-scripts start",
-		"eject": "react-native-scripts eject",
-		"android": "react-native-scripts android",
-		"ios": "react-native-scripts ios",
+		"start": "react-native start",
+		"android": "react-native run-android",
+		"ios": "react-native run-ios",
 		"test": "jest && flow && eslint .",
 		"precommit": "yarn test"
 	},
 	"jest": {
-		"preset": "jest-expo",
+		"preset": "react-native",
 		"transformIgnorePatterns": [
 			"node_modules/(?!(react-native|lottie-react-native|expo|react-native-maps|react-native-svg|react-native-branch|native-base-shoutem-theme|react-native-easy-grid|react-native-drawer|react-native-vector-icons|react-native-keyboard-aware-scroll-view|react-navigation|native-base|@expo|react-native-scrollable-tab-view)/)"
 		]
 	},
 	"dependencies": {
-		"expo": "20.0.2",
 		"lodash": "4.13.1",
 		"moment": "2.13.0",
 		"native-base": "2.3.2",
